--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "reactstrap": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "eslint-config-airbnb": "^19.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,7 +43,6 @@
   },
   "devDependencies": {
     "eslint": "^8.12.0",
-    "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
